[gd_scene load_steps=2 format=3 uid="uid://d0eqfxw3n7fhv"]

[ext_resource type="Script" path="res://Scripts/in_game_menu.gd" id="1_lbwr5"]

[node name="PauseMenu" type="MarginContainer"]
offset_left = -60.0
offset_top = -49.0
offset_right = 60.0
offset_bottom = 55.0
script = ExtResource("1_lbwr5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Exit to Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit to Menu"

[node name="Quit Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit to Menu" to="." method="_on_exit_to_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
